modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-seccomp/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-allowed-seccomp-profiles
tests:
  - name: pss-baseline
    template: constraint-template.yaml
    constraint: ../constraints/pss_baseline.yaml
    cases:
      - name: 001-allowed-daemonset-runtime-default-securitycontext-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/001-001-allowed-daemonset-runtime-default-securitycontext-container.yaml
        assertions:
          - violations: "no"
      - name: 002-allowed-deployment-runtime-default-securitycontext-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/002-002-allowed-deployment-runtime-default-securitycontext-container.yaml
        assertions:
          - violations: "no"
      - name: 003-allowed-localhost-profile-annotation
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/003-003-allowed-localhost-profile-annotation.yaml
        assertions:
          - violations: "no"
      - name: 004-allowed-localhost-profile-securitycontext
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/004-004-allowed-localhost-profile-securitycontext.yaml
        assertions:
          - violations: "no"
      - name: 005-allowed-no-seccomp-profile
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/005-005-allowed-no-seccomp-profile.yaml
        assertions:
          - violations: "no"
      - name: 006-allowed-runtime-default-annotation
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/006-006-allowed-runtime-default-annotation.yaml
        assertions:
          - violations: "no"
      - name: 007-allowed-runtime-default-securitycontext-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/007-007-allowed-runtime-default-securitycontext-container.yaml
        assertions:
          - violations: "no"
      - name: 008-allowed-runtime-default-securitycontext-pod
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/008-008-allowed-runtime-default-securitycontext-pod.yaml
        assertions:
          - violations: "no"
      - name: 009-disallowed-daemonset-unconfined-securitycontext
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/009-009-disallowed-daemonset-unconfined-securitycontext.yaml
        assertions:
          - violations: "yes"
      - name: 010-disallowed-deployment-unconfined-securitycontext
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/010-010-disallowed-deployment-unconfined-securitycontext.yaml
        assertions:
          - violations: "yes"
      - name: 011-disallowed-multiple-containers-one-unconfined
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/011-011-disallowed-multiple-containers-one-unconfined.yaml
        assertions:
          - violations: "yes"
      - name: 012-disallowed-unconfined-annotation
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/012-012-disallowed-unconfined-annotation.yaml
        assertions:
          - violations: "yes"
      - name: 013-disallowed-unconfined-securitycontext
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/013-013-disallowed-unconfined-securitycontext.yaml
        assertions:
          - violations: "yes"
      - name: 014-disallowed-unconfined-securitycontext-pod
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/014-014-disallowed-unconfined-securitycontext-pod.yaml
        assertions:
          - violations: "yes"
      - name: 015-disallowed-initcontainer-unconfined-securitycontext
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/015-015-disallowed-initcontainer-unconfined-securitycontext.yaml
        assertions:
          - violations: "yes"
      - name: 016-disallowed-initcontainer-unconfined-annotation
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/016-016-disallowed-initcontainer-unconfined-annotation.yaml
        assertions:
          - violations: "yes"
      - name: 017-disallowed-multiple-containers-one-unconfined-annotation
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/017-017-disallowed-multiple-containers-one-unconfined-annotation.yaml
        assertions:
          - violations: "yes"
      - name: 018-disallowed-unconfined-container-annotation
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/017-017-disallowed-multiple-containers-one-unconfined-annotation.yaml
        assertions:
          - violations: "yes"
      - name: 019-allowed-ephemeralcontainer-runtime-default-securitycontext-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/019-019-allowed-ephemeralcontainer-runtime-default-securitycontext-container.yaml
        assertions:
          - violations: "no"
      - name: 020-disallowed-ephemeralcontainer-unconfined-annotation
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/020-020-disallowed-ephemeralcontainer-unconfined-annotation.yaml
        assertions:
          - violations: "yes"
  - name: pss-restricted
    template: constraint-template.yaml
    constraint: ../constraints/pss_restricted.yaml
    cases:
      - name: 014-allowed-localhost-profile-annotation
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/021-014-allowed-localhost-profile-annotation.yaml
        assertions:
          - violations: "no"
      - name: 015-allowed-localhost-profile-securitycontext
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/022-015-allowed-localhost-profile-securitycontext.yaml
        assertions:
          - violations: "no"
      - name: 016-allowed-runtime-default-securitycontext
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/023-016-allowed-runtime-default-securitycontext.yaml
        assertions:
          - violations: "no"
      - name: 017-allowed-no-seccomp-profile
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/005-005-allowed-no-seccomp-profile.yaml
        assertions:
          - violations: "no"
      - name: 018-disallowed-unconfined-securitycontext
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/013-013-disallowed-unconfined-securitycontext.yaml
        assertions:
          - violations: "yes"
  - name: security-policy
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: 021-allowed-localhost-veryspecialfile-annotation
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/026-021-allowed-localhost-veryspecialfile-annotation.yaml
        assertions:
          - violations: "no"
      - name: 025-disallowed-localhost-wrong-file-securitycontext
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/027-025-disallowed-localhost-wrong-file-securitycontext.yaml
        assertions:
          - violations: "yes"
      - name: 026-disallowed-multiple-containers-one-disallowed
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/028-026-disallowed-multiple-containers-one-disallowed.yaml
        assertions:
          - violations: "yes"
      - name: 027-allowed-no-seccomp-profile
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/005-005-allowed-no-seccomp-profile.yaml
        assertions:
          - violations: "no"
      - name: 029-disallowed-unconfined-securitycontext
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/013-013-disallowed-unconfined-securitycontext.yaml
        assertions:
          - violations: "yes"
  - name: pss-baseline-with-exception
    template: constraint-template.yaml
    constraint: ../constraints/pss_baseline.yaml
    cases:
      - name: 031-033-allowed-by-exception-localhost-profile
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/001-031-033-allowed-by-exception-localhost-profile-inv-1.yaml
        object: test_samples/pods/031-031-033-allowed-by-exception-localhost-profile.yaml
        assertions:
          - violations: "no"
      - name: 031-035-allowed-by-exception-unconfined
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/002-031-035-allowed-by-exception-unconfined-inv-1.yaml
        object: test_samples/pods/032-031-035-allowed-by-exception-unconfined.yaml
        assertions:
          - violations: "no"
      - name: 033-039-allowed-by-container-exception-unconfined
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/003-033-039-allowed-by-container-exception-unconfined-inv-1.yaml
        object: test_samples/pods/033-033-039-allowed-by-container-exception-unconfined.yaml
        assertions:
          - violations: "no"
      - name: 030-037-disallowed-by-exception-profile-mismatch
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/001-031-033-allowed-by-exception-localhost-profile-inv-1.yaml
        object: test_samples/pods/034-030-037-disallowed-by-exception-profile-mismatch.yaml
        assertions:
          - violations: "yes"
      - name: 036-disallowed-no-exception-label
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/035-036-disallowed-no-exception-label.yaml
        assertions:
          - violations: "yes"
      - name: 032-038-disallowed-by-exception-empty-spec
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/005-032-038-disallowed-by-exception-empty-spec-inv-1.yaml
        object: test_samples/pods/036-032-038-disallowed-by-exception-empty-spec.yaml
        assertions:
          - violations: "yes"
